ppa/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Parser.y
-----------------------------------------------------------------------------


terminal ';' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Prog                               (0)
	Prog -> Declarations                               (1)
	Declarations -> Declaration Declarations           (2)
	Declarations -> Declaration                        (3)
	Declaration -> Axiom                               (4)
	Declaration -> Theorem                             (5)
	Axiom -> axiom Name ':' Form                       (6)
	Theorem -> theorem Name ':' Form proof ProofStart end   (7)
	ProofStart -> Proof                                (8)
	ProofStart ->                                      (9)
	Proof -> ProofStep Proof                           (10)
	Proof -> ProofStep                                 (11)
	Proof -> ProofStepBlock Proof                      (12)
	Proof -> ProofStepBlock                            (13)
	ProofStep -> suppose Name ':' Form                 (14)
	ProofStep -> thus Form OptionalBy                  (15)
	ProofStep -> hence Form OptionalBy                 (16)
	ProofStep -> have Name ':' Form OptionalBy         (17)
	ProofStep -> then Name ':' Form OptionalBy         (18)
	ProofStep -> equivalently Form                     (19)
	OptionalBy -> by Justification                     (20)
	OptionalBy ->                                      (21)
	ProofStepBlock -> claim Name ':' Form proof Proof end   (22)
	Justification -> Name ',' Justification            (23)
	Justification -> Name                              (24)
	Name -> id                                         (25)
	Name -> name                                       (26)
	Form -> id TermArgs                                (27)
	Form -> Form and Form                              (28)
	Form -> Form or Form                               (29)
	Form -> Form imp Form                              (30)
	Form -> not Form                                   (31)
	Form -> exists var dot Form                        (32)
	Form -> forall var dot Form                        (33)
	Form -> true                                       (34)
	Form -> false                                      (35)
	Form -> '(' Form ')'                               (36)
	Term -> var                                        (37)
	Term -> id TermArgs                                (38)
	TermArgs ->                                        (39)
	TermArgs -> '(' Terms ')'                          (40)
	Terms -> Term                                      (41)
	Terms -> Term ',' Terms                            (42)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { Token _ TokenParenOpen }
	')'            { Token _ TokenParenClose }
	and            { Token _ TokenAnd }
	or             { Token _ TokenOr }
	imp            { Token _ TokenImp }
	not            { Token _ TokenNot }
	true           { Token _ TokenTrue }
	false          { Token _ TokenFalse }
	forall         { Token _ TokenForall }
	exists         { Token _ TokenExists }
	dot            { Token _ TokenDot }
	id             { Token _ (TokenId $$) }
	var            { Token _ (TokenVar $$) }
	';'            { Token _ TokenSemicolon }
	':'            { Token _ TokenDoubleColon }
	','            { Token _ TokenComma }
	axiom          { Token _ TokenAxiom }
	theorem        { Token _ TokenTheorem }
	proof          { Token _ TokenProof }
	end            { Token _ TokenEnd }
	name           { Token _ (TokenQuotedName $$) }
	suppose        { Token _ TokenSuppose }
	thus           { Token _ TokenThus }
	then           { Token _ TokenThen }
	hence          { Token _ TokenHence }
	have           { Token _ TokenHave }
	by             { Token _ TokenBy }
	equivalently   { Token _ TokenEquivalently }
	claim          { Token _ TokenClaim }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Prog            rule  1
	Declarations    rules 2, 3
	Declaration     rules 4, 5
	Axiom           rule  6
	Theorem         rule  7
	ProofStart      rules 8, 9
	Proof           rules 10, 11, 12, 13
	ProofStep       rules 14, 15, 16, 17, 18, 19
	OptionalBy      rules 20, 21
	ProofStepBlock  rule  22
	Justification   rules 23, 24
	Name            rules 25, 26
	Form            rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36
	Term            rules 37, 38
	TermArgs        rules 39, 40
	Terms           rules 41, 42

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Prog                              (rule 0)

	axiom          shift, and enter state 6
	theorem        shift, and enter state 7

	Prog           goto state 8
	Declarations   goto state 2
	Declaration    goto state 3
	Axiom          goto state 4
	Theorem        goto state 5

State 1

	Prog -> . Declarations                              (rule 1)

	axiom          shift, and enter state 6
	theorem        shift, and enter state 7

	Declarations   goto state 2
	Declaration    goto state 3
	Axiom          goto state 4
	Theorem        goto state 5

State 2

	Prog -> Declarations .                              (rule 1)

	%eof           reduce using rule 1


State 3

	Declarations -> Declaration . Declarations          (rule 2)
	Declarations -> Declaration .                       (rule 3)

	axiom          shift, and enter state 6
	theorem        shift, and enter state 7
	%eof           reduce using rule 3

	Declarations   goto state 13
	Declaration    goto state 3
	Axiom          goto state 4
	Theorem        goto state 5

State 4

	Declaration -> Axiom .                              (rule 4)

	axiom          reduce using rule 4
	theorem        reduce using rule 4
	%eof           reduce using rule 4


State 5

	Declaration -> Theorem .                            (rule 5)

	axiom          reduce using rule 5
	theorem        reduce using rule 5
	%eof           reduce using rule 5


State 6

	Axiom -> axiom . Name ':' Form                      (rule 6)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 12

State 7

	Theorem -> theorem . Name ':' Form proof ProofStart end    (rule 7)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 9

State 8

	%start_parse -> Prog .                              (rule 0)

	%eof           accept


State 9

	Theorem -> theorem Name . ':' Form proof ProofStart end    (rule 7)

	':'            shift, and enter state 15


State 10

	Name -> id .                                        (rule 25)

	':'            reduce using rule 25
	','            reduce using rule 25
	end            reduce using rule 25
	suppose        reduce using rule 25
	thus           reduce using rule 25
	then           reduce using rule 25
	hence          reduce using rule 25
	have           reduce using rule 25
	equivalently   reduce using rule 25
	claim          reduce using rule 25


State 11

	Name -> name .                                      (rule 26)

	':'            reduce using rule 26
	','            reduce using rule 26
	end            reduce using rule 26
	suppose        reduce using rule 26
	thus           reduce using rule 26
	then           reduce using rule 26
	hence          reduce using rule 26
	have           reduce using rule 26
	equivalently   reduce using rule 26
	claim          reduce using rule 26


State 12

	Axiom -> axiom Name . ':' Form                      (rule 6)

	':'            shift, and enter state 14


State 13

	Declarations -> Declaration Declarations .          (rule 2)

	%eof           reduce using rule 2


State 14

	Axiom -> axiom Name ':' . Form                      (rule 6)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 24

State 15

	Theorem -> theorem Name ':' . Form proof ProofStart end    (rule 7)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 16

State 16

	Theorem -> theorem Name ':' Form . proof ProofStart end    (rule 7)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	proof          shift, and enter state 34


State 17

	Form -> '(' . Form ')'                              (rule 36)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 33

State 18

	Form -> not . Form                                  (rule 31)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 32

State 19

	Form -> true .                                      (rule 34)

	')'            reduce using rule 34
	and            reduce using rule 34
	or             reduce using rule 34
	imp            reduce using rule 34
	axiom          reduce using rule 34
	theorem        reduce using rule 34
	proof          reduce using rule 34
	end            reduce using rule 34
	suppose        reduce using rule 34
	thus           reduce using rule 34
	then           reduce using rule 34
	hence          reduce using rule 34
	have           reduce using rule 34
	by             reduce using rule 34
	equivalently   reduce using rule 34
	claim          reduce using rule 34
	%eof           reduce using rule 34


State 20

	Form -> false .                                     (rule 35)

	')'            reduce using rule 35
	and            reduce using rule 35
	or             reduce using rule 35
	imp            reduce using rule 35
	axiom          reduce using rule 35
	theorem        reduce using rule 35
	proof          reduce using rule 35
	end            reduce using rule 35
	suppose        reduce using rule 35
	thus           reduce using rule 35
	then           reduce using rule 35
	hence          reduce using rule 35
	have           reduce using rule 35
	by             reduce using rule 35
	equivalently   reduce using rule 35
	claim          reduce using rule 35
	%eof           reduce using rule 35


State 21

	Form -> forall . var dot Form                       (rule 33)

	var            shift, and enter state 31


State 22

	Form -> exists . var dot Form                       (rule 32)

	var            shift, and enter state 30


State 23

	Form -> id . TermArgs                               (rule 27)

	'('            shift, and enter state 29
	')'            reduce using rule 39
	and            reduce using rule 39
	or             reduce using rule 39
	imp            reduce using rule 39
	axiom          reduce using rule 39
	theorem        reduce using rule 39
	proof          reduce using rule 39
	end            reduce using rule 39
	suppose        reduce using rule 39
	thus           reduce using rule 39
	then           reduce using rule 39
	hence          reduce using rule 39
	have           reduce using rule 39
	by             reduce using rule 39
	equivalently   reduce using rule 39
	claim          reduce using rule 39
	%eof           reduce using rule 39

	TermArgs       goto state 28

State 24

	Axiom -> axiom Name ':' Form .                      (rule 6)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	axiom          reduce using rule 6
	theorem        reduce using rule 6
	%eof           reduce using rule 6


State 25

	Form -> Form and . Form                             (rule 28)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 55

State 26

	Form -> Form or . Form                              (rule 29)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 54

State 27

	Form -> Form imp . Form                             (rule 30)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 53

State 28

	Form -> id TermArgs .                               (rule 27)

	')'            reduce using rule 27
	and            reduce using rule 27
	or             reduce using rule 27
	imp            reduce using rule 27
	axiom          reduce using rule 27
	theorem        reduce using rule 27
	proof          reduce using rule 27
	end            reduce using rule 27
	suppose        reduce using rule 27
	thus           reduce using rule 27
	then           reduce using rule 27
	hence          reduce using rule 27
	have           reduce using rule 27
	by             reduce using rule 27
	equivalently   reduce using rule 27
	claim          reduce using rule 27
	%eof           reduce using rule 27


State 29

	TermArgs -> '(' . Terms ')'                         (rule 40)

	id             shift, and enter state 51
	var            shift, and enter state 52

	Term           goto state 49
	Terms          goto state 50

State 30

	Form -> exists var . dot Form                       (rule 32)

	dot            shift, and enter state 48


State 31

	Form -> forall var . dot Form                       (rule 33)

	dot            shift, and enter state 47


State 32

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)
	Form -> not Form .                                  (rule 31)

	')'            reduce using rule 31
	and            reduce using rule 31
	or             reduce using rule 31
	imp            reduce using rule 31
	axiom          reduce using rule 31
	theorem        reduce using rule 31
	proof          reduce using rule 31
	end            reduce using rule 31
	suppose        reduce using rule 31
	thus           reduce using rule 31
	then           reduce using rule 31
	hence          reduce using rule 31
	have           reduce using rule 31
	by             reduce using rule 31
	equivalently   reduce using rule 31
	claim          reduce using rule 31
	%eof           reduce using rule 31


State 33

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)
	Form -> '(' Form . ')'                              (rule 36)

	')'            shift, and enter state 46
	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27


State 34

	Theorem -> theorem Name ':' Form proof . ProofStart end    (rule 7)

	end            reduce using rule 9
	suppose        shift, and enter state 39
	thus           shift, and enter state 40
	then           shift, and enter state 41
	hence          shift, and enter state 42
	have           shift, and enter state 43
	equivalently   shift, and enter state 44
	claim          shift, and enter state 45

	ProofStart     goto state 35
	Proof          goto state 36
	ProofStep      goto state 37
	ProofStepBlock goto state 38

State 35

	Theorem -> theorem Name ':' Form proof ProofStart . end    (rule 7)

	end            shift, and enter state 70


State 36

	ProofStart -> Proof .                               (rule 8)

	end            reduce using rule 8


State 37

	Proof -> ProofStep . Proof                          (rule 10)
	Proof -> ProofStep .                                (rule 11)

	end            reduce using rule 11
	suppose        shift, and enter state 39
	thus           shift, and enter state 40
	then           shift, and enter state 41
	hence          shift, and enter state 42
	have           shift, and enter state 43
	equivalently   shift, and enter state 44
	claim          shift, and enter state 45

	Proof          goto state 69
	ProofStep      goto state 37
	ProofStepBlock goto state 38

State 38

	Proof -> ProofStepBlock . Proof                     (rule 12)
	Proof -> ProofStepBlock .                           (rule 13)

	end            reduce using rule 13
	suppose        shift, and enter state 39
	thus           shift, and enter state 40
	then           shift, and enter state 41
	hence          shift, and enter state 42
	have           shift, and enter state 43
	equivalently   shift, and enter state 44
	claim          shift, and enter state 45

	Proof          goto state 68
	ProofStep      goto state 37
	ProofStepBlock goto state 38

State 39

	ProofStep -> suppose . Name ':' Form                (rule 14)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 67

State 40

	ProofStep -> thus . Form OptionalBy                 (rule 15)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 66

State 41

	ProofStep -> then . Name ':' Form OptionalBy        (rule 18)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 65

State 42

	ProofStep -> hence . Form OptionalBy                (rule 16)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 64

State 43

	ProofStep -> have . Name ':' Form OptionalBy        (rule 17)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 63

State 44

	ProofStep -> equivalently . Form                    (rule 19)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 62

State 45

	ProofStepBlock -> claim . Name ':' Form proof Proof end    (rule 22)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Name           goto state 61

State 46

	Form -> '(' Form ')' .                              (rule 36)

	')'            reduce using rule 36
	and            reduce using rule 36
	or             reduce using rule 36
	imp            reduce using rule 36
	axiom          reduce using rule 36
	theorem        reduce using rule 36
	proof          reduce using rule 36
	end            reduce using rule 36
	suppose        reduce using rule 36
	thus           reduce using rule 36
	then           reduce using rule 36
	hence          reduce using rule 36
	have           reduce using rule 36
	by             reduce using rule 36
	equivalently   reduce using rule 36
	claim          reduce using rule 36
	%eof           reduce using rule 36


State 47

	Form -> forall var dot . Form                       (rule 33)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 60

State 48

	Form -> exists var dot . Form                       (rule 32)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 59

State 49

	Terms -> Term .                                     (rule 41)
	Terms -> Term . ',' Terms                           (rule 42)

	')'            reduce using rule 41
	','            shift, and enter state 58


State 50

	TermArgs -> '(' Terms . ')'                         (rule 40)

	')'            shift, and enter state 57


State 51

	Term -> id . TermArgs                               (rule 38)

	'('            shift, and enter state 29
	')'            reduce using rule 39
	','            reduce using rule 39

	TermArgs       goto state 56

State 52

	Term -> var .                                       (rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37


State 53

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)
	Form -> Form imp Form .                             (rule 30)

	')'            reduce using rule 30
	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	axiom          reduce using rule 30
	theorem        reduce using rule 30
	proof          reduce using rule 30
	end            reduce using rule 30
	suppose        reduce using rule 30
	thus           reduce using rule 30
	then           reduce using rule 30
	hence          reduce using rule 30
	have           reduce using rule 30
	by             reduce using rule 30
	equivalently   reduce using rule 30
	claim          reduce using rule 30
	%eof           reduce using rule 30


State 54

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form or Form .                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	')'            reduce using rule 29
	and            reduce using rule 29
	or             reduce using rule 29
	imp            reduce using rule 29
	axiom          reduce using rule 29
	theorem        reduce using rule 29
	proof          reduce using rule 29
	end            reduce using rule 29
	suppose        reduce using rule 29
	thus           reduce using rule 29
	then           reduce using rule 29
	hence          reduce using rule 29
	have           reduce using rule 29
	by             reduce using rule 29
	equivalently   reduce using rule 29
	claim          reduce using rule 29
	%eof           reduce using rule 29


State 55

	Form -> Form . and Form                             (rule 28)
	Form -> Form and Form .                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	')'            reduce using rule 28
	and            reduce using rule 28
	or             reduce using rule 28
	imp            reduce using rule 28
	axiom          reduce using rule 28
	theorem        reduce using rule 28
	proof          reduce using rule 28
	end            reduce using rule 28
	suppose        reduce using rule 28
	thus           reduce using rule 28
	then           reduce using rule 28
	hence          reduce using rule 28
	have           reduce using rule 28
	by             reduce using rule 28
	equivalently   reduce using rule 28
	claim          reduce using rule 28
	%eof           reduce using rule 28


State 56

	Term -> id TermArgs .                               (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38


State 57

	TermArgs -> '(' Terms ')' .                         (rule 40)

	')'            reduce using rule 40
	and            reduce using rule 40
	or             reduce using rule 40
	imp            reduce using rule 40
	','            reduce using rule 40
	axiom          reduce using rule 40
	theorem        reduce using rule 40
	proof          reduce using rule 40
	end            reduce using rule 40
	suppose        reduce using rule 40
	thus           reduce using rule 40
	then           reduce using rule 40
	hence          reduce using rule 40
	have           reduce using rule 40
	by             reduce using rule 40
	equivalently   reduce using rule 40
	claim          reduce using rule 40
	%eof           reduce using rule 40


State 58

	Terms -> Term ',' . Terms                           (rule 42)

	id             shift, and enter state 51
	var            shift, and enter state 52

	Term           goto state 49
	Terms          goto state 78

State 59

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)
	Form -> exists var dot Form .                       (rule 32)

	')'            reduce using rule 32
	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	axiom          reduce using rule 32
	theorem        reduce using rule 32
	proof          reduce using rule 32
	end            reduce using rule 32
	suppose        reduce using rule 32
	thus           reduce using rule 32
	then           reduce using rule 32
	hence          reduce using rule 32
	have           reduce using rule 32
	by             reduce using rule 32
	equivalently   reduce using rule 32
	claim          reduce using rule 32
	%eof           reduce using rule 32


State 60

	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)
	Form -> forall var dot Form .                       (rule 33)

	')'            reduce using rule 33
	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	axiom          reduce using rule 33
	theorem        reduce using rule 33
	proof          reduce using rule 33
	end            reduce using rule 33
	suppose        reduce using rule 33
	thus           reduce using rule 33
	then           reduce using rule 33
	hence          reduce using rule 33
	have           reduce using rule 33
	by             reduce using rule 33
	equivalently   reduce using rule 33
	claim          reduce using rule 33
	%eof           reduce using rule 33


State 61

	ProofStepBlock -> claim Name . ':' Form proof Proof end    (rule 22)

	':'            shift, and enter state 77


State 62

	ProofStep -> equivalently Form .                    (rule 19)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 19
	suppose        reduce using rule 19
	thus           reduce using rule 19
	then           reduce using rule 19
	hence          reduce using rule 19
	have           reduce using rule 19
	equivalently   reduce using rule 19
	claim          reduce using rule 19


State 63

	ProofStep -> have Name . ':' Form OptionalBy        (rule 17)

	':'            shift, and enter state 76


State 64

	ProofStep -> hence Form . OptionalBy                (rule 16)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 21
	suppose        reduce using rule 21
	thus           reduce using rule 21
	then           reduce using rule 21
	hence          reduce using rule 21
	have           reduce using rule 21
	by             shift, and enter state 73
	equivalently   reduce using rule 21
	claim          reduce using rule 21

	OptionalBy     goto state 75

State 65

	ProofStep -> then Name . ':' Form OptionalBy        (rule 18)

	':'            shift, and enter state 74


State 66

	ProofStep -> thus Form . OptionalBy                 (rule 15)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 21
	suppose        reduce using rule 21
	thus           reduce using rule 21
	then           reduce using rule 21
	hence          reduce using rule 21
	have           reduce using rule 21
	by             shift, and enter state 73
	equivalently   reduce using rule 21
	claim          reduce using rule 21

	OptionalBy     goto state 72

State 67

	ProofStep -> suppose Name . ':' Form                (rule 14)

	':'            shift, and enter state 71


State 68

	Proof -> ProofStepBlock Proof .                     (rule 12)

	end            reduce using rule 12


State 69

	Proof -> ProofStep Proof .                          (rule 10)

	end            reduce using rule 10


State 70

	Theorem -> theorem Name ':' Form proof ProofStart end .    (rule 7)

	axiom          reduce using rule 7
	theorem        reduce using rule 7
	%eof           reduce using rule 7


State 71

	ProofStep -> suppose Name ':' . Form                (rule 14)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 84

State 72

	ProofStep -> thus Form OptionalBy .                 (rule 15)

	end            reduce using rule 15
	suppose        reduce using rule 15
	thus           reduce using rule 15
	then           reduce using rule 15
	hence          reduce using rule 15
	have           reduce using rule 15
	equivalently   reduce using rule 15
	claim          reduce using rule 15


State 73

	OptionalBy -> by . Justification                    (rule 20)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Justification  goto state 82
	Name           goto state 83

State 74

	ProofStep -> then Name ':' . Form OptionalBy        (rule 18)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 81

State 75

	ProofStep -> hence Form OptionalBy .                (rule 16)

	end            reduce using rule 16
	suppose        reduce using rule 16
	thus           reduce using rule 16
	then           reduce using rule 16
	hence          reduce using rule 16
	have           reduce using rule 16
	equivalently   reduce using rule 16
	claim          reduce using rule 16


State 76

	ProofStep -> have Name ':' . Form OptionalBy        (rule 17)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 80

State 77

	ProofStepBlock -> claim Name ':' . Form proof Proof end    (rule 22)

	'('            shift, and enter state 17
	not            shift, and enter state 18
	true           shift, and enter state 19
	false          shift, and enter state 20
	forall         shift, and enter state 21
	exists         shift, and enter state 22
	id             shift, and enter state 23

	Form           goto state 79

State 78

	Terms -> Term ',' Terms .                           (rule 42)

	')'            reduce using rule 42


State 79

	ProofStepBlock -> claim Name ':' Form . proof Proof end    (rule 22)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	proof          shift, and enter state 88


State 80

	ProofStep -> have Name ':' Form . OptionalBy        (rule 17)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 21
	suppose        reduce using rule 21
	thus           reduce using rule 21
	then           reduce using rule 21
	hence          reduce using rule 21
	have           reduce using rule 21
	by             shift, and enter state 73
	equivalently   reduce using rule 21
	claim          reduce using rule 21

	OptionalBy     goto state 87

State 81

	ProofStep -> then Name ':' Form . OptionalBy        (rule 18)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 21
	suppose        reduce using rule 21
	thus           reduce using rule 21
	then           reduce using rule 21
	hence          reduce using rule 21
	have           reduce using rule 21
	by             shift, and enter state 73
	equivalently   reduce using rule 21
	claim          reduce using rule 21

	OptionalBy     goto state 86

State 82

	OptionalBy -> by Justification .                    (rule 20)

	end            reduce using rule 20
	suppose        reduce using rule 20
	thus           reduce using rule 20
	then           reduce using rule 20
	hence          reduce using rule 20
	have           reduce using rule 20
	equivalently   reduce using rule 20
	claim          reduce using rule 20


State 83

	Justification -> Name . ',' Justification           (rule 23)
	Justification -> Name .                             (rule 24)

	','            shift, and enter state 85
	end            reduce using rule 24
	suppose        reduce using rule 24
	thus           reduce using rule 24
	then           reduce using rule 24
	hence          reduce using rule 24
	have           reduce using rule 24
	equivalently   reduce using rule 24
	claim          reduce using rule 24


State 84

	ProofStep -> suppose Name ':' Form .                (rule 14)
	Form -> Form . and Form                             (rule 28)
	Form -> Form . or Form                              (rule 29)
	Form -> Form . imp Form                             (rule 30)

	and            shift, and enter state 25
	or             shift, and enter state 26
	imp            shift, and enter state 27
	end            reduce using rule 14
	suppose        reduce using rule 14
	thus           reduce using rule 14
	then           reduce using rule 14
	hence          reduce using rule 14
	have           reduce using rule 14
	equivalently   reduce using rule 14
	claim          reduce using rule 14


State 85

	Justification -> Name ',' . Justification           (rule 23)

	id             shift, and enter state 10
	name           shift, and enter state 11

	Justification  goto state 90
	Name           goto state 83

State 86

	ProofStep -> then Name ':' Form OptionalBy .        (rule 18)

	end            reduce using rule 18
	suppose        reduce using rule 18
	thus           reduce using rule 18
	then           reduce using rule 18
	hence          reduce using rule 18
	have           reduce using rule 18
	equivalently   reduce using rule 18
	claim          reduce using rule 18


State 87

	ProofStep -> have Name ':' Form OptionalBy .        (rule 17)

	end            reduce using rule 17
	suppose        reduce using rule 17
	thus           reduce using rule 17
	then           reduce using rule 17
	hence          reduce using rule 17
	have           reduce using rule 17
	equivalently   reduce using rule 17
	claim          reduce using rule 17


State 88

	ProofStepBlock -> claim Name ':' Form proof . Proof end    (rule 22)

	suppose        shift, and enter state 39
	thus           shift, and enter state 40
	then           shift, and enter state 41
	hence          shift, and enter state 42
	have           shift, and enter state 43
	equivalently   shift, and enter state 44
	claim          shift, and enter state 45

	Proof          goto state 89
	ProofStep      goto state 37
	ProofStepBlock goto state 38

State 89

	ProofStepBlock -> claim Name ':' Form proof Proof . end    (rule 22)

	end            shift, and enter state 91


State 90

	Justification -> Name ',' Justification .           (rule 23)

	end            reduce using rule 23
	suppose        reduce using rule 23
	thus           reduce using rule 23
	then           reduce using rule 23
	hence          reduce using rule 23
	have           reduce using rule 23
	equivalently   reduce using rule 23
	claim          reduce using rule 23


State 91

	ProofStepBlock -> claim Name ':' Form proof Proof end .    (rule 22)

	end            reduce using rule 22
	suppose        reduce using rule 22
	thus           reduce using rule 22
	then           reduce using rule 22
	hence          reduce using rule 22
	have           reduce using rule 22
	equivalently   reduce using rule 22
	claim          reduce using rule 22


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 43
Number of terminals: 29
Number of non-terminals: 17
Number of states: 92
